<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_rounded_top"
    android:paddingVertical="@dimen/_12sdp">

    <View
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center"
        android:background="@drawable/view_8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/body.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stringTitleDialog"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/caption.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/stringItemTitle"/>

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/caption.regular"
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/edit_background"
            android:paddingHorizontal="@dimen/_18sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/caption.regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/stringItemCommand"/>

        <androidx.appcompat.widget.AppCompatEditText
            style="@style/caption.regular"
            android:id="@+id/etCommand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/edit_background"
            android:paddingHorizontal="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_28sdp">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/body.regular"
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_24sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:background="@drawable/bg_button_red"
                android:textColor="@color/white"
                android:text="@string/stringItemDelete"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/body.regular"
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_24sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:background="@drawable/bg_button"
                android:textColor="@color/white"
                android:text="@string/stringItemAction"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>